* Minor improvements in "sjp.lm" with "type='ma'".

Bug fixes:
* Fixed bug in "sjt.itemanalysis".
* Fixed bug in "sji.setValueLabels".
* Fixed bug in "sjt.frq" with string-variables that contained a larger amount of unique values including "NA"-values, when parameter "skipZeroRows" was set to "auto" (default).
* Minor bug fixes in "sjp.lm" with "type='ma'".

Version 1.6.9
------------------------------------------------------------------------------
New functions:
* Added new functions "sjd.norm", "sjd.chisq", "sjd.f" and "sjd.t" to plot distribution curves, optionally with shaded areas indicating the p-level area.

Changes to functions:
* Plotting single predictors of linear models (type = "pred" in function "sjp.lm") now also supports plotting interaction terms and factor levels. Needs parameter "x=TRUE" in lm-call to work.
* Added parameter "showCI" to "sjp.frq" to show 95% confidence intervals. Use "error.bar.colors" to change colors of error bars when using bar charts. In case of dot plots, error bars have the same color as dots (see "geom.colors").
* Added parameter "remove.spaces" to all "sjt"-function to remove leading spaces (parantheses of html-tags), which may make tables less cluttered when importing them into office applications.
* Added parameters "digits" and "digits.stats" to "sjt.stackfrq", to specifiy digits after decimal point for percentage and statistic values.
* Added parameter "atomic.to.fac" to "sji.SPSS", so variables with nominal or ordinal scale imported from SPSS data sets are imported as "factors", not as "atomic".
* "sjp.scatter" no longer needs both "x" and "y" to be specified, but at least one of them.
* "sjt.grpmean" now shows p-values for each group (retrieved from anova table).
* Added new theme-preset ('theme = "538"') to "sjp.setTheme".

Bug fixes:
* "sjt.grpmean" did not indicate p-values smaller than 0.001 as "p<0.001", but still as "p=0.000" - fixed.