@@ -34,7 +34,8 @@ the index number for this category. Else, set \code{cat.neutral=NULL} (default).
 The frequencies of neutral categories are plotted as grey bars on the left side of
 the figure.}
 
-\item{weightBy}{A weight factor that will be applied to weight all cases from \code{items}.}
+\item{weightBy}{A weight factor that will be applied to weight all cases from \code{items}.
+Must be a vector of same length as \code{nrow(items)}. Default is \code{NULL}, so no weights are used.}
 
 \item{weightByTitleString}{If a weight factor is supplied via the parameter \code{weightBy}, the diagram's title
 may indicate this with a remark. Default is \code{NULL}, so the diagram's title will not be modified when
